Increase size of add-tg-container and add stroke

--- a/style.css
+++ b/style.css
@@ -1610,8 +1610,8 @@ body {
 }
 
 .add-tg-container {
-  width: 30px;
-  height: 30px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   background: #000000;
   position: fixed;
@@ -1624,4 +1624,5 @@ body {
 
 .add-to-get {
   color: #FFFFFF;
+  stroke: #FFFFFF;
 }
